@@ -582,12 +582,14 @@ if(ENABLE_TESTS)
 	find_package( Boost 1.36 REQUIRED COMPONENTS unit_test_framework )
 endif(ENABLE_TESTS)
 if(ENABLE_GAME)
-	find_package( FriBiDi 0.10.9 )
-	if(ENABLE_FRIBIDI AND FRIBIDI_LIBRARIES)
-		add_definitions(-DHAVE_FRIBIDI)
-	elseif(ENABLE_FRIBIDI AND NOT FRIBIDI_LIBRARIES)
-		message("Could not find FriBiDi. Disabling FriBiDi support.")
-	endif()
+	if(ENABLE_FRIBIDI)
+		PKG_CHECK_MODULES(FRIBIDI fribidi>=0.10.9)
+		if(FRIBIDI_FOUND)
+			add_definitions(-DHAVE_FRIBIDI)
+		elseif(NOT FRIBIDI_FOUND)
+			message("Could not find FriBiDi. Disabling FriBiDi support.")
+		endif(FRIBIDI_FOUND)
+	endif(ENABLE_FRIBIDI)
 
 	if(ENABLE_NOTIFICATIONS)
 		pkg_check_modules(LIBDBUS dbus-1)
