@@ -573,6 +573,7 @@ Version 1.13.0-dev:
    * Fixed bug #23445: set default build type in cmake to "Release" to ensure
      that the game is not unoptimized
    * Increased minimum version of FriBiDi to 0.10.9 in cmake to match scons
+   * Changed how FriBiDi is found in cmake to using pkgconfig
 
 Version 1.11.11:
  * Add-ons server:
